# screen-recorder

./: .gitignore  Cargo.toml  Info.plist  LICENSE  PLAN.md  README.en.md  README.md  build.sh
.github/workflows/: build.yml
src/: about.rs  app.rs  capture.rs  config.rs  history.rs  i18n.rs  logging.rs  main.rs  paths.rs  profile.rs  screenshot_naming.rs  simulate.rs  single_instance.rs  temp.rs  tray.rs  video.rs  workdirs.rs
src/capture/: dedup.rs  geometry.rs
src/platform/: macos.rs  mod.rs  windows.rs
