[package]
name = "screen-recorder"
version = "0.1.0"
edition = "2021"

[dependencies]
screenshots = "0.8"
tray-icon = "0.14"
muda = "0.12"
image = "0.25"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
dirs = "5"
winit = "0.29"
