[package]
name = "screen-recorder"
version = "0.1.0"
edition = "2021"

[dependencies]
screenshots = "0.8"
tray-icon = "0.14"
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
dirs = "5"
winit = "0.29"
eframe = { version = "0.29", default-features = false, features = ["glow", "default_fonts"] }
rfd = "0.17.2"
