[package]
name = "screen-recorder"
version = "0.1.0"
edition = "2021"

[dependencies]
screenshots = "0.8"
tray-icon = "0.24.0"
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
dirs = "5"
winit = "0.30.13"
eframe = { version = "0.34.3", default-features = false, features = ["glow", "default_fonts"] }
rfd = "0.17.2"
trash = "5.2.6"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
